--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<spring-security.version>6.4.1</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
